SERVER-54735 Fix AsyncTry to not return BrokenPromise on executor shutdown in certain cases